       Canon PIXMA MG5200
       Canon PIXMA MG6100
       Canon PIXMA MG8100
       Canon PIXMA MP250
       Canon PIXMA MP270
       Canon PIXMA MP280
       Canon PIXMA MP450
       Canon PIXMA MP460
       Canon PIXMA MP480
       Canon PIXMA MP493 (EXPERIMENTAL)
       Canon PIXMA MP495
       Canon PIXMA MP520
       Canon PIXMA MP540
       Canon PIXMA MP550
       Canon PIXMA MP600
       Canon PIXMA MP950
       Canon PIXMA MP960
       Canon PIXMA MP990
       Canon PIXMA MX300 (EXPERIMENTAL)
       Canon PIXMA MX310 (EXPERIMENTAL)
       Canon PIXMA MX330 (EXPERIMENTAL)
       Canon PIXMA MX340 (EXPERIMENTAL)
       Canon PIXMA MX350 (EXPERIMENTAL)
       Canon PIXMA MX360 (EXPERIMENTAL)
       Canon PIXMA MX410 (EXPERIMENTAL)
       Canon PIXMA MX420 (EXPERIMENTAL)
       Canon PIXMA MX700 (EXPERIMENTAL)
       Canon PIXMA MX850 (EXPERIMENTAL)
       Canon PIXMA MX860 (EXPERIMENTAL)
       Canon PIXMA MX870 (EXPERIMENTAL)
       Canon PIXMA MX880 (EXPERIMENTAL)
       Canon PIXMA MX7600 (EXPERIMENTAL)
       Canon PIXMA Pro9000 (EXPERIMENTAL)
       Canon PIXMA Pro9000 Mk.II (EXPERIMENTAL)
       Canon PIXMA Pro9500 (EXPERIMENTAL)
       Canon PIXMA Pro9500 Mk.II (EXPERIMENTAL)

     - Epson inkjet printers:

       EPSON B-310
       EPSON B-310N
       EPSON B-510DN
       EPSON ME Office 600F
       EPSON ME Office 620F
       Epson Stylus Photo R3000 (EXPERIMENTAL)
       Epson Stylus Pro 3885
       Epson Stylus Pro 4000 (EXPERIMENTAL)
       Epson Stylus Pro 4450 (EXPERIMENTAL)
       Epson Stylus Pro 7700 (EXPERIMENTAL)
       Epson Stylus Pro 7890 (EXPERIMENTAL)
       Epson Stylus Pro 9700 (EXPERIMENTAL)
       Epson Stylus Pro 9890 (EXPERIMENTAL)

     - Dye sublimation printers:

       Kodak EasyShare G600 Printer Dock
       Kodak PD-4000
       Kodak PD-6000
       Kodak Photo Printer
       Kodak Photo Printer 500
       Kodak Printer Dock Plus
       Kodak Printer Dock Plus S3
