@@ -298,6 +298,7 @@ III) MAJOR CHANGES FROM PREVIOUS RELEASES
        Canon PIXMA MP540
        Canon PIXMA MP550
        Canon PIXMA MP600
+       Canon PIXMA MP800
        Canon PIXMA MP950
        Canon PIXMA MP960
        Canon PIXMA MP990
